# MedBot-Healthcare-AI-Assistant

./: MEDBOT_TECHNICAL_DOCUMENTATION.md  README.md  README_Article_References.md  README_Streamlit.md  article_fetcher.py  article_fetching_system.py  chat_interface.py  complete_pdf_converter.py  debug_rag.py  embedding_system.py  env_example.txt  healthcare_rag.py  main.py  md_to_pdf_converter.py  medical_summary3.md  medical_summary4.md  medical_summary_1.md  medical_summary_2.md  medical_summary_3.md  medical_summary_4.md  medical_summary_5.md  medical_summary_6.md  medical_summary_7.md  new_app.py  pdf_processor.py  pmid.py  process_pdfs.py  pyproject.toml  rag_system.py  requirements.txt  requirements_streamlit.txt  run_medbot.py  run_streamlit.bat  simple_html_to_pdf.py  streamlit_app.py  test_article_system.py  test_azure_groq_pipeline.py  test_chat_endpoint.py  test_europe_pmc.py  test_healthcare_detection.py  (+3 more)
article_references/: articles_reference_heart_Transplant_20250829_003420.md  articles_reference_heart_transplantation_research_20250829_000141.md  articles_reference_heart_transplantation_research_20250829_000628.md  articles_reference_lung_cancer_20250829_004450.md
articles/: Male newborn as a determinant of severe preeclampsia a case-control study..md  Modeling passenger comfort in turboprop aircraft using objective measures..md
pdf_outputs/: article.html  article_PMC12175419_20250829_195208.html  article_PMC12193669_20250829_202510.html  article_PMC12283295_20250829_162838.html  article_PMC12306772_20250829_152839.html  (+13 more)
templates/: index.html
(+18 files in other folders)
