[project]
name = "medbot"
version = "1.0.0"
description = "RAG-Enhanced Healthcare AI Assistant"
authors = [
    {name = "MedBot Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pypdf2>=3.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "aiofiles>=23.2.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.1",
    "groq>=0.31.0",
    "google-generativeai>=0.8.5",
    "openai>=1.99.9",
    "requests>=2.31.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "streamlit-chat>=0.0.2",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.1",
    "pypandoc>=1.15",
    "pandoc>=2.4",
    "weasyprint",
    "reportlab",
]
requires-python = ">=3.9,<4.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
